--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/avatar.png" type="image/webp">
     <title>Malia Client | Website</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
