--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <br>
         <h1 class="text-3xl">Download</h1>
         <p class="mt-4">
-          <a href="MaliaClientInstaller.zip" class="download-btn" download>Download</a>
+          <a href="MaliaClient-Installer.jar" class="download-btn" download>Download</a>
         </p>
       </div>
     </div>
